hydran-68: Implement DELETE method
